--- a/style.css
+++ b/style.css
@@ -40,6 +40,20 @@ a {
   font-size: 20px;
 }
 
+.profile {
+  color: aliceblue;
+  font-size: 150%;
+  padding: 20px;
+}
+
+.info {
+  float: right;
+}
+
+h4 {
+  text-align: center;
+}
+
 .about,
 .subscription {
   color: aliceblue;
