--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -188,3 +188,41 @@ form {
   position: relative;
   top: 10px;
 }
+
+.songsList {
+  color: aliceblue;
+  font-size: 120%;
+}
+
+.styled-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.styled-table thead tr {
+  background-color: #ff00aa70;
+  color: #ffffff;
+  text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: #73ff009c;
+}
+
+.styled-table tbody tr:last-of-type {
+  border-bottom: 2px solid #ff00ea70;
+}
