--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  background: url(https://cdn.pixabay.com/photo/2016/11/22/19/15/hand-1850120_960_720.jpg)
+  background: url("../Assets/background.jpg")
     no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
